--- a/uikit/style.css
+++ b/uikit/style.css
@@ -7,3 +7,17 @@ h1 {
     font-size: 17px;
     color:#2c3e50;
 }
+
+.btn {
+    padding: 15px; 
+    border:none;
+    color:#fff;
+    font-size:17px;
+    font-weight:bold;
+    border-radius:10px;
+    background-color: #2ecc71;
+}
+
+.btn:hover {
+    background-color: #27ae60;
+}
