--- a/uikit/style.css
+++ b/uikit/style.css
@@ -1,6 +1,7 @@
 body{
     margin:0;
     padding:0;
+    font-family:"Arial", sans-serif;
 }
 
 h1 {
@@ -20,4 +21,13 @@ h1 {
 
 .btn:hover {
     background-color: #27ae60;
+}
+
+.alert {
+    color:#721c24;
+    background-color:#f5c6cb;
+    border: 1px solid f8d7da;
+    font-size:17px;
+    border-radius:10px;
+    padding: 20px; 
 }
