--- a/uikit/style.css
+++ b/uikit/style.css
@@ -7,6 +7,7 @@ body{
 h1 {
     font-size: 17px;
     color:#2c3e50;
+    text-align:center
 }
 
 .btn {
@@ -17,6 +18,7 @@ h1 {
     font-weight:bold;
     border-radius:10px;
     background-color: #2ecc71;
+    text-decoration:none;
 }
 
 .btn:hover {
@@ -30,6 +32,7 @@ h1 {
     font-size:17px;
     border-radius:10px;
     padding: 20px; 
+    margin:20px 0px;
 }
 
 .list-group {
@@ -70,21 +73,38 @@ h1 {
 }
 
 .card-content h2 {
-    margin:0;
+    margin:0px 0px 20px 0px;
 }
 
 .card-content p {
     margin:0;
     font-size:14px;
     line-height: 1.5em;
+    margin-bottom:20px;
 }
 
 .card-content a {
-    display:block;
+    display:inline-block;
 }
 
-@media (max-width: 680px) { 
+.navbar {
+    background-color:#f8f9fa;
+    color:#2c3e50;
+    display:flex;
+}
+
+.navbar-item {
+    list-style: none;
+    list-style-position: outside;
+    font-size:15px;
+    padding:10px;
+}
+
+@media (max-width: 700px) { 
     .list-group, .card {
-        width:100vw;
+        width: 90vw;
+    }
+    .navbar {
+        flex-direction:column;
     }
  }
