--- a/uikit/style.css
+++ b/uikit/style.css
@@ -100,35 +100,51 @@ h1 {
     padding:10px;
 }
 
-.chessboard-test, #chessboard {
+.chessboard-html, #chessboard-js {
     display:flex;
     flex-wrap: wrap; 
-    flex-grow:1;
 }
 
-ul.chessboard-test li, ul#chessboard li{
+ul.chessboard-html li, ul#chessboard-js li{
     list-style: none;
     list-style-position: outside;
-    width: 15vw;
-    height: 15vw;
+    width: 10vw;
+    height: 10vw;
 }
 
-.first-line li:nth-child(odd), .second-line li:nth-child(even), .third-line li:nth-child(odd){
+.first-line li:nth-child(odd), .second-line li:nth-child(even), .third-line li:nth-child(odd), .fourth-line li:nth-child(even){
     background-color:#000;
 }
 
-.first-line li:nth-child(even), .second-line li:nth-child(odd), .third-line li:nth-child(even){
+.first-line li:nth-child(even), .second-line li:nth-child(odd), .third-line li:nth-child(even), .fourth-line li:nth-child(odd){
     background-color:#fff;
 }
 
-ul#chessboard li:nth-child(odd){
+ul#chessboard-js li:nth-child(odd){
     background-color:#f00;
 }
 
-ul#chessboard li:nth-child(even){
+ul#chessboard-js li:nth-child(even){
     background-color:#fff;
 }
 
+.chessboard-grid-items{
+    height: 12vw;
+}
+
+.chessboard-grid-items:nth-child(odd){
+    background-color:#00f;
+}
+
+.chessboard-grid-items:nth-child(even){
+    background-color:#fff;
+}
+
+#chessboard-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
 
 @media (max-width: 700px) { 
     .list-group, .card {
@@ -136,9 +152,5 @@ ul#chessboard li:nth-child(even){
     }
     .navbar {
         flex-direction:column;
-    }
-    ul#chessboard-test li, ul#chessboard li{
-        width: 25vw;
-        height: 25vw;
     }
  }
